--- a/examples/sampleapp.html
+++ b/examples/sampleapp.html
@@ -5,15 +5,20 @@
         <meta charset="UTF-8">
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.17/angular.js"></script>
 
-        <script src="../dist/debug/vsalert-0.0.3.js"></script>
-        <link href="../dist/debug/vsalert-0.0.3.css" rel="stylesheet" type="text/css"/>
+        <!--
+        <script src="../dist/debug/vsalert-0.0.4.js"></script>
+        <link href="../dist/debug/vsalert-0.0.4.css" rel="stylesheet" type="text/css"/>
+        -->
+
+        <script src="../dist/min/vsalert-0.0.4.min.js"></script>
+        <link href="../dist/min/vsalert-0.0.4.min.css" rel="stylesheet" type="text/css"/>
 
         <script src="sampleapp.js"></script>
         <link href="sampleapp.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body ng-app="sampleapp">
-        <div ng-controller="samplectrl">
+        <div ng-controller="samplectrl" style="margin-bottom: 1000px">
             <h3>Alerting service - AngularJS reusable UI component</h3>
             
             <p>Click buttons below to generate example alerts.</p>
