--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
+    <a href="https://github.com/kekeh/vsalert"><img style="position: absolute; top: 0; right: 0; border: 0;"
+                                                        src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67"
+                                                        alt="Fork me on GitHub"
+                                                        data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -18,8 +23,8 @@
     <!-- vsalert demo needs these begin -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.js"></script>
 
-    <script src="demo/vsalert-0.0.3.js" type="text/javascript"></script>
-    <link href="demo/vsalert-0.0.3.css" rel="stylesheet" type="text/css"/>
+    <script src="demo/vsalert-0.0.4.js" type="text/javascript"></script>
+    <link href="demo/vsalert-0.0.4.css" rel="stylesheet" type="text/css"/>
     <script src="demo/sampleapp.js"></script>
     <link href="demo/sampleapp.css" rel="stylesheet" type="text/css">
     <!-- vsalert demo needs these end -->
@@ -83,10 +88,6 @@
             <p>See my other components from <a id="otherdemoslink" class="anchor"
                                                href="http://kekeh.github.io/index.html"
                                                target="_blank" aria-hidden="true">here</a></p>
-
-
-
-
 
 
         </section>
